# marketing-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: __init__.py  base_agent.py  campaign_optimization.py  content_creation.py  customer_engagement.py  lead_generation.py  market_intelligence.py  requirements.py  strategy_synthesis.py
brands/americavoice/: icp.yaml  integrations.yaml
config/: brand_voice.yaml  icp.yaml  integrations.yaml  settings.yaml
config/templates/: brand_voice.yaml  icp.yaml  integrations.yaml
examples/: input.json  sample_input.json
examples/americavoice/: README.md  brand_voice.yaml  input.json  integrations.yaml
integrations/: __init__.py  ads.py  base_integration.py  checks.py  content.py  crm.py
pipeline/: __init__.py  brand.py  cli.py  orchestrator.py  reset.py  setup_wizard.py
prompts/campaign_optimization/: analyze_performance.md  recommendations.md  system.md  weekly_report.md
prompts/content_creation/: ad_copy.md  blog.md  email_sequence.md  landing_page.md  social_post.md  system.md
prompts/customer_engagement/: customer_analysis.md  onboarding_sequence.md  social_response.md  system.md  upsell_opportunity.md
prompts/lead_generation/: draft_outreach.md  score_lead.md  system.md
prompts/market_intelligence/: competitor_analysis.md  compile_briefing.md  review_analysis.md  system.md  trend_monitoring.md
prompts/strategy_synthesis/: brand_audit.md  gap_analysis.md  strategy_recommendations.md  system.md  weekly_digest.md
tests/: test_agents.py
